--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
 
 plugins {
     id 'com.kncept.junit.reporter' version '2.0.1'
-	id 'com.google.cloud.tools.jib' version '2.8.0'
-	id "com.github.spotbugs" version '4.6.0'
+//	id "com.github.spotbugs" version '4.6.0'
 }
 
 apply plugin: 'java'
-
-apply plugin: 'checkstyle'
-apply plugin: 'pmd'
+//apply plugin: 'checkstyle'
+//apply plugin: 'pmd'
 
 group = 'com.kncept'
 version = '0.0.1-SNAPSHOT'
