--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,4 +25,10 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build and Test with Gradle
-      run: ./gradlew
+      run: ./gradlew check jar
+    - name: Expose built artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: build/libs/
+        retention-days: 7
